final for submission

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div id="wrapper">
-        <h1>Note Scraper</h1>
+        <h1>News Scraper</h1>
         <h2><i>Articles from the Huffington Post</i></h2>
-        <div id="articles"></div>
+        <div id="articles">
+        </div>
         <div id="notes"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
