added portfolio link

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <h1>News Scraper</h1>
         <h2><i>Articles from the Huffington Post</i></h2>
         <div id="articles">
+            <!--A save and delete button should be here for saving and deleting articles but I couldn't do that-->
         </div>
         <div id="notes"></div>
     </div>
@@ -21,3 +22,5 @@
 </body>
 
 </html>
+
+<!-- Link to portfolio page https://ralracish.github.io/Bootstrap-Portfolio/portfolio.html -->
